tests/dataset/tpc-ds/compiler/cpp/q47.error
/tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:103:40: error: ‘v’ was not declared in this scope; did you mean ‘v2’?
  103 |         decltype(std::vector<decltype((v.sum_sales - v.avg_monthly_sales))>{
      |                                        ^
      |                                        v2
/tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:103:75: error: template argument 1 is invalid
  103 |         decltype(std::vector<decltype((v.sum_sales - v.avg_monthly_sales))>{
      |                                                                           ^
/tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:103:75: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:105:9: error: template argument 1 is invalid
  105 |         V2>>
      |         ^~
/tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:105:11: error: template argument 1 is invalid
  105 |         V2>>
      |           ^~
/tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:105:11: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:113:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  113 |       __items.push_back(
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:115:59: error: no matching function for call to ‘std::vector<int>::vector(<brace-enclosed initializer list>)’
  115 |                (v.sum_sales - v.avg_monthly_sales), v.item},
      |                                                           ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:8:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = int; _Alloc = std::allocator<int>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:115:59: note:   deduced conflicting types for parameter ‘_InputIterator’ (‘int’ and ‘std::__cxx11::basic_string<char>’)
  115 |                (v.sum_sales - v.avg_monthly_sales), v.item},
      |                                                           ^
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; allocator_type = std::allocator<int>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:43: note:   no known conversion for argument 1 from ‘int’ to ‘std::initializer_list<int>’
  678 |       vector(initializer_list<value_type> __l,
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = int; _Alloc = std::allocator<int>; std::__type_identity_t<_Alloc> = std::allocator<int>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:23: note:   no known conversion for argument 1 from ‘int’ to ‘std::vector<int>&&’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |              ~~~~~~~~~^~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = int; _Alloc = std::allocator<int>; allocator_type = std::allocator<int>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 2 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = int; _Alloc = std::allocator<int>; allocator_type = std::allocator<int>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 2 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = int; _Alloc = std::allocator<int>; std::__type_identity_t<_Alloc> = std::allocator<int>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:28: note:   no known conversion for argument 1 from ‘int’ to ‘const std::vector<int>&’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |              ~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = int; _Alloc = std::allocator<int>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = int; _Alloc = std::allocator<int>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; size_type = long unsigned int; value_type = int; allocator_type = std::allocator<int>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:47: note:   no known conversion for argument 2 from ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘const std::vector<int>::value_type&’ {aka ‘const int&’}
  569 |       vector(size_type __n, const value_type& __value,
      |                             ~~~~~~~~~~~~~~~~~~^~~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; size_type = long unsigned int; allocator_type = std::allocator<int>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:51: note:   no known conversion for argument 2 from ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘const std::vector<int>::allocator_type&’ {aka ‘const std::allocator<int>&’}
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |                             ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; allocator_type = std::allocator<int>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = int; _Alloc = std::allocator<int>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 2 provided
/tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:118:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
  118 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:118:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
  118 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:121:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  121 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:3:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq4788796145/001/prog.cpp:121:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  121 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
